# bai

./: .gitignore  manage.py  pyproject.toml  readme.md
bai/: asgi.py  owasp5_settings_insecure.py  owasp5_settings_secure.py  settings.py  urls.py  wsgi.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/: change_password.html  change_password_insecure.html  signin.html
